fix spacing and reactions alignment

--- a/packages/vanilla-theme-core/scss/components/_ideation.scss
+++ b/packages/vanilla-theme-core/scss/components/_ideation.scss
@@ -12,7 +12,7 @@
     .PhotoWrap.IndexPhoto,
     .idea-counter-module .idea-counter-box {
         margin: 0;
+        width: $theme-photo_size;
+        height: $theme-photo_size;
     }
-
-
 }
